Fix "software engineering" typo

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -32,7 +32,7 @@ Overall GPA (4.00 scale): 3.367
 \subsection*{Experience}
 
 \subsubsection*{MOBI Wireless Management, Indianapolis, IN}
-\paragraph*{Software Engineering (January 2017--Present)}
+\paragraph*{Software Developer (January 2017--Present)}
 \begin{itemize}
 \item Extending and refactoring a legacy monolithic Ruby on Rails application
 \item Mentoring junior developers
