Remove "Ruby on Rails" from desired position

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -15,7 +15,7 @@
 \maketitle
 
 \subsection*{Objective}
-Full-time Ruby on Rails software developer position
+Full-time Software Developer Position
 
 \subsection*{Education}
 The Ohio State University, Columbus, OH \\
