Update (and prune) skillset

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -24,7 +24,7 @@ Overall GPA (4.00 scale): 3.367
 
 \subsection*{Qualifications}
 \begin{itemize}
-\item Extensive knowledge of Ruby, Ruby on Rails, JavaScript, jQuery, HTML, HAML, shell scripting (bash, fish, and zsh), and PostgreSQL.
+\item Extensive knowledge of Ruby, Ruby on Rails, Elixir, Phoenix, JavaScript, and PostgreSQL.
 \item Some knowledge of C, Go, Clojure, Rust, Python, and R.
 \item Formal training in Java and ANSI C.
 \end{itemize}
