--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -10,7 +10,7 @@
 
 \begin{document}
 \title{Jonathan Arnett}
-\author{\texttt{jonarnett90@gmail.com} $\bullet$ \texttt{http://j3rn.com} $\bullet$ \texttt{https://github.com/J3RN}}
+\author{\texttt{jonathan.arnett@protonmail.com} $\bullet$ \texttt{http://j3rn.com} $\bullet$ \texttt{https://github.com/J3RN}}
 \date{}
 \maketitle
 
