--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -15,7 +15,7 @@
 \maketitle
 
 \subsection*{Objective}
-Full-time Software Developer Position
+Full-time Software Developer position
 
 \subsection*{Education}
 The Ohio State University, Columbus, OH \\
