Make qualifications relevant

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -24,9 +24,9 @@ Overall GPA (4.00 scale): 3.367
 
 \subsection*{Qualifications}
 \begin{itemize}
-\item Extensive knowledge of Ruby, Ruby on Rails, Elixir, Phoenix, JavaScript, and PostgreSQL.
-\item Some knowledge of C, Go, Clojure, Rust, Python, and R.
-\item Formal training in Java and ANSI C.
+\item Extensive knowledge of Ruby, Ruby on Rails, Elixir, Phoenix, JavaScript, and PostgreSQL
+\item 7 years professional software development experience
+\item 5 years professional Ruby on Rails development experience
 \end{itemize}
 
 \subsection*{Experience}
