--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -31,22 +31,20 @@ Overall GPA (4.00 scale): 3.367
 
 \subsection*{Experience}
 
-\subsubsection*{MOBI Wireless Management, Indianapolis, IN}
-\paragraph*{Software Developer (January 2017--Present)}
+\subsubsection*{ScriptDrop, Columbus, OH}
+\paragraph{Software Engineering Team Lead (April 2019--Present)}
 \begin{itemize}
-\item Extending and refactoring a legacy monolithic Ruby on Rails application
-\item Mentoring junior developers
-\item Working with Git version control and GitHub
-\item Working in an Agile environment
+\item Leading projects to integrate with national chains
+\item Redesigning the pharmacy solution to enable new partners to leverage the product in new ways
+\item Adding new functionality and user experience improvements to an existing Phoenix app in extremely limited timeframes
 \end{itemize}
 
 \subsubsection*{CoverMyMeds, Columbus, OH}
-\paragraph{Co-op Software Engineer (May 2015--December 2015)}
+\paragraph*{Software Developer (June 2018--March 2019)}
 \begin{itemize}
-\item Writing internally used Ruby gems to facilitate infrastructure changes
-\item Extending Ruby on Rails applications in a microservices architecture
-\item Deploying code to a large array of Linux servers
-\item Working with Git version control and GitHub Enterprise
+\item Maintaining and extending Ruby on Rails microservices
+\item Drastically rearchitecting and expanding a Phoenix application within a tight deadline
+\item Constantly working to streamline and modernize existing processes.
 \end{itemize}
 
 \subsection*{Activities}
