--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -49,11 +49,11 @@ Overall GPA (4.00 scale): 3.367
 
 \subsection*{Activities}
 \begin{itemize}
-\item Active member of the Indianapolis Ruby Brigade (May 2016--Present)
+\item Organizer of Columbus Emacs (August 2018--Present)
+\item Member of Columbus Elixir (March 2019--Present)
+\item Member of the Columbus Ruby Brigade (Autumn 2014--Present)
 \item Maintainer of Tmuxinator (https://github.com/tmuxinator/tmuxinator) (October 2015--May 2018)
 \item President of the Collegiate Web Developers Group at OSU (Autumn 2014--Spring 2016)
-\item Member of the Open Source Club at OSU (Autumn 2013--December 2016)
-\item Member of the Columbus Ruby Brigade (Autumn 2014--December 2016)
 \end{itemize}
 
 \subsection*{Projects}
