--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -56,11 +56,11 @@ Overall GPA (4.00 scale): 3.367
 \item President of the Collegiate Web Developers Group at OSU (Autumn 2014--Spring 2016)
 \end{itemize}
 
-\subsection*{Projects}
+\subsection*{Open Source Projects}
 \begin{itemize}
+\item Time Tracker (https://github.com/j3rn/time-tracker)
 \item Game of Evolution (https://github.com/j3rn/game-of-evolution)
 \item Minecraft Manager (https://github.com/j3rn/minecraft-manager)
-\item Time Tracker (https://github.com/j3rn/time-tracker)
 \item Pigeon, the Autonomous Quadcopter (https://github.com/j3rn/pigeon)
 \end{itemize}
 
