Update experience again

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -35,8 +35,8 @@ Overall GPA (4.00 scale): 3.367
 \paragraph{Software Engineering Team Lead (April 2019--Present)}
 \begin{itemize}
 \item Leading projects to integrate with national chains
-\item Redesigning the pharmacy solution to enable new partners to leverage the product in new ways
 \item Adding new functionality and user experience improvements to an existing Phoenix app in extremely limited timeframes
+\item Redesigning the pharmacy solution to enable partners to leverage the product in new ways
 \end{itemize}
 
 \subsubsection*{CoverMyMeds, Columbus, OH}
