--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -24,9 +24,9 @@ Overall GPA (4.00 scale): 3.367
 
 \subsection*{Qualifications}
 \begin{itemize}
-\item Extensive knowledge of Ruby, Ruby on Rails, Elixir, Phoenix, JavaScript, and PostgreSQL
+\item Extensive knowledge of Elixir, Phoenix, Ruby, Ruby on Rails, JavaScript, and PostgreSQL
 \item 7 years professional software development experience
-\item 5 years professional Ruby on Rails development experience
+\item 1.5 years professional Elixir and Phoenix development experience
 \end{itemize}
 
 \subsection*{Experience}
@@ -36,7 +36,7 @@ Overall GPA (4.00 scale): 3.367
 \begin{itemize}
 \item Leading projects to integrate with national chains
 \item Adding new functionality and user experience improvements to an existing Phoenix app in extremely limited timeframes
-\item Redesigning the pharmacy solution to enable partners to leverage the product in new ways
+\item Mentoring junior developers, often times from across the country
 \end{itemize}
 
 \subsubsection*{CoverMyMeds, Columbus, OH}
@@ -47,16 +47,20 @@ Overall GPA (4.00 scale): 3.367
 \item Constantly working to streamline and modernize existing processes.
 \end{itemize}
 
+\subsection*{Open Source}
+\begin{itemize}
+\item Maintainer of Tmuxinator (https://github.com/tmuxinator/tmuxinator) (October 2015--May 2018)
+\item Committer to Elixir, Magit, i2cdevlib, and other popular projects
+\end{itemize}
+
 \subsection*{Activities}
 \begin{itemize}
-\item Organizer of Columbus Emacs (August 2018--Present)
 \item Member of Columbus Elixir (March 2019--Present)
 \item Member of the Columbus Ruby Brigade (Autumn 2014--Present)
-\item Maintainer of Tmuxinator (https://github.com/tmuxinator/tmuxinator) (October 2015--May 2018)
 \item President of the Collegiate Web Developers Group at OSU (Autumn 2014--Spring 2016)
 \end{itemize}
 
-\subsection*{Open Source Projects}
+\subsection*{Projects}
 \begin{itemize}
 \item Time Tracker (https://github.com/j3rn/time-tracker)
 \item Game of Evolution (https://github.com/j3rn/game-of-evolution)
