--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -15,7 +15,7 @@
 \maketitle
 
 \subsection*{Objective}
-Full-time Software Developer position
+Full-Time Software Developer Position
 
 \subsection*{Education}
 The Ohio State University, Columbus, OH \\
@@ -32,19 +32,20 @@ Overall GPA (4.00 scale): 3.367
 \subsection*{Experience}
 
 \subsubsection*{ScriptDrop, Columbus, OH}
-\paragraph{Software Engineering Team Lead (April 2019--Present)}
+\paragraph{Software Engineering Team Lead (April 2019--April 2020)}
 \begin{itemize}
 \item Leading projects to integrate with national chains
-\item Adding new functionality and user experience improvements to an existing Phoenix app in extremely limited timeframes
-\item Mentoring junior developers, often times from across the country
+\item Adding new functionality a Phoenix app in extremely limited timeframes
+\item Mentoring junior developers, often from across the country
 \end{itemize}
 
 \subsubsection*{CoverMyMeds, Columbus, OH}
 \paragraph*{Software Developer (June 2018--March 2019)}
 \begin{itemize}
-\item Maintaining and extending Ruby on Rails microservices
+\item Maintaining and extending Ruby on Rails and Phoenix microservices
 \item Drastically rearchitecting and expanding a Phoenix application within a tight deadline
-\item Constantly working to streamline and modernize existing processes.
+\item Constantly working to streamline and modernize existing processes
+\item Authoring a tool used to load server configuration into applications
 \end{itemize}
 
 \subsection*{Open Source}
