--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -1,72 +1,133 @@
 \documentclass[]{article}
 \usepackage[margin=0.5in]{geometry}
+\usepackage{wallpaper}
+\ThisULCornerWallPaper{1.0}{background.png}
+
+\usepackage{fontspec}
+\usepackage{titlesec}
+\usepackage{titling}
+\usepackage{hyperref}
+\hypersetup{
+  colorlinks=true,
+  urlcolor=blue
+}
+
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
+
 \usepackage{enumitem}
+\usepackage{tikz}
+\usetikzlibrary{shapes}
 
 \linespread{1.0}
 \setlist{nosep}
-\renewcommand*\sfdefault{phv}
-\renewcommand{\familydefault}{\sfdefault}
 \pagenumbering{gobble}
+
+\setmainfont{DejaVu Sans}
+\setmonofont{Victor Mono}
+
+\newfontfamily\nodefont{Victor Mono Bold}
+\newfontfamily\headingfont[]{Victor Mono Medium}
+
+\titleformat*{\section}{\Large\bfseries\itshape\headingfont}
+\titleformat*{\subsection}{\large\bfseries\headingfont}
+
+\renewcommand{\maketitlehooka}{\color{white}\bfseries\headingfont}
+\renewcommand{\maketitlehookb}{\mdseries}
+
+\setlength{\droptitle}{-5em}
+
+% Omit spacing/styling for the omitted date
+\predate{}
+\postdate{}
+
+\newcommand{\mysection}[1]{
+  \section*{\colorbox{lightgray!50}{\parbox{\textwidth-2\fboxsep}{#1}}}
+}
 
 \begin{document}
 \title{Jonathan Arnett}
-\author{\texttt{jonathan.arnett@protonmail.com} $\bullet$ \texttt{http://j3rn.com} $\bullet$ \texttt{https://github.com/J3RN}}
+\author{
+  \colorbox{lightgray!50}{
+    \texttt{
+      \includegraphics[height=12pt]{favicon.png}
+      \href{https://j3rn.com}{j3rn.com}
+      \includegraphics[height=12pt]{mark-github.png}
+      \href{https://github.com/J3RN}{github.com/J3RN}
+      \includegraphics[height=12pt]{mail.png}
+      \href{mailto:jonathan.arnett@protonmail.com}{jonathan.arnett@protonmail.com}
+    }
+  }
+}
 \date{}
 \maketitle
 
-\subsection*{Objective}
-Full-Time Software Developer Position
+\mysection{Summary}
 
-\subsection*{Education}
+Results-oriented developer with over 7 years of professional experience. Excels at leading small teams, mentoring junior developers, and finding concise, elegant solutions to complicated problems.
+
+\mysection{Skills}
+\begin{tikzpicture}[rounded corners=2pt]
+  \matrix[
+  nodes={rectangle, fill=blue!70, text=white, inner sep=5pt, font=\nodefont},
+  column sep=10pt
+  ]{
+    \node {Elixir}; &
+    \node {Phoenix}; &
+    \node {Ruby}; &
+    \node {Ruby on Rails}; &
+    \node {JavaScript}; &
+    \node {PostgreSQL}; &
+    \node {TDD}; &
+    \node {Git}; &
+    \node {Remote Work}; \\
+  };
+\end{tikzpicture}
+
+\mysection{Experience}
+
+\subsection*{
+  Software Engineer / Team Lead / Tech Lead at \href{https://scriptdrop.co/}{ScriptDrop} \\
+  \normalsize{(April 2019 – April 2020)}
+}
+\begin{itemize}[leftmargin=.15in]
+\item Lead projects to integrate with national grocery and pharmacy chains
+\item Built robust API integrations with USPS, UPS, and FedEx
+\item Rebuilt the courier routing system in under a week
+\item Mentored junior developers, often from across the country
+\end{itemize}
+
+\subsection*{
+  Software Developer at \href{https://www.covermymeds.com/main/}{CoverMyMeds} \\
+  \normalsize{(June 2018 – March 2019)}
+}
+\begin{itemize}[leftmargin=.15in]
+\item Helped build a Electronic Benefits Verification (eBV) system in under two weeks
+\item Contributed to the Docker-based local development platform
+\item Authored an internal library to load server configuration into applications
+\item Analyzed PostgreSQL queries to optimize application performance
+\end{itemize}
+
+\mysection{Projects}
+\subsection*{\href{https://github.com/tmuxinator/tmuxinator}{Tmuxinator}\\ \normalsize{(October 2015 – May 2018)}}
+\begin{itemize}[leftmargin=.15in]
+\item Open-source project maintained by myself and two other developers
+\item Contributed substantial features
+\item Engaged with the community to resolve issues
+\end{itemize}
+
+\subsection*{\href{https://github.com/J3RN/time-tracker/}{Time Tracker} \\ \normalsize{(January 2015 – May 2019)}}
+\begin{itemize}[leftmargin=.15in]
+\item Created full-stack web application with Ruby on Rails
+\item Added prioritization of users' tasks based on provided information
+\item Built visualizations of task metrics
+\end{itemize}
+
+\subsection*{Contributor to \href{https://elixir-lang.org/}{Elixir}, \href{https://magit.vc/}{Magit}, \href{https://www.i2cdevlib.com/}{i2cdevlib}, and other popular open-source projects}
+
+\mysection{Education}
 The Ohio State University, Columbus, OH \\
 B.S. Computer Science Engineering. Graduated December, 2016 \\
-Overall GPA (4.00 scale): 3.367
-
-\subsection*{Qualifications}
-\begin{itemize}
-\item Extensive knowledge of Elixir, Phoenix, Ruby, Ruby on Rails, JavaScript, and PostgreSQL
-\item 7 years professional software development experience
-\item 1.5 years professional Elixir and Phoenix development experience
-\end{itemize}
-
-\subsection*{Experience}
-
-\subsubsection*{ScriptDrop, Columbus, OH}
-\paragraph{Software Engineering Team Lead (April 2019--April 2020)}
-\begin{itemize}
-\item Leading projects to integrate with national chains
-\item Adding new functionality a Phoenix app in extremely limited timeframes
-\item Mentoring junior developers, often from across the country
-\end{itemize}
-
-\subsubsection*{CoverMyMeds, Columbus, OH}
-\paragraph*{Software Developer (June 2018--March 2019)}
-\begin{itemize}
-\item Maintaining and extending Ruby on Rails and Phoenix microservices
-\item Drastically rearchitecting and expanding a Phoenix application within a tight deadline
-\item Constantly working to streamline and modernize existing processes
-\item Authoring a tool used to load server configuration into applications
-\end{itemize}
-
-\subsection*{Open Source}
-\begin{itemize}
-\item Maintainer of Tmuxinator (https://github.com/tmuxinator/tmuxinator) (October 2015--May 2018)
-\item Committer to Elixir, Magit, i2cdevlib, and other popular projects
-\end{itemize}
-
-\subsection*{Activities}
-\begin{itemize}
-\item Member of Columbus Elixir (March 2019--Present)
-\item Member of the Columbus Ruby Brigade (Autumn 2014--Present)
-\item President of the Collegiate Web Developers Group at OSU (Autumn 2014--Spring 2016)
-\end{itemize}
-
-\subsection*{Projects}
-\begin{itemize}
-\item Time Tracker (https://github.com/j3rn/time-tracker)
-\item Game of Evolution (https://github.com/j3rn/game-of-evolution)
-\item Minecraft Manager (https://github.com/j3rn/minecraft-manager)
-\item Pigeon, the Autonomous Quadcopter (https://github.com/j3rn/pigeon)
-\end{itemize}
+Overall GPA (4.00 scale): 3.4
 
 \end{document}
