Shift links every-so-slightly up

--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -35,7 +35,7 @@
 \setlength{\droptitle}{-5em}
 
 \pretitle{\begin{center}\Huge\headingfont\color{white}}
-\posttitle{\par\end{center}\vspace{-.75em}}
+\posttitle{\par\end{center}\vspace{-1em}}
 
 \preauthor{\begin{center}\large \headingfont \begin{tabular}[t]{c}}
 \postauthor{\end{tabular}\par\end{center}}
