--- a/Arnett-Jonathan.tex
+++ b/Arnett-Jonathan.tex
@@ -145,7 +145,7 @@ Results-oriented developer with over 7 years of professional experience. Excels 
 
 \mysection{Education}
 The Ohio State University, Columbus, OH \\
-B.S. Computer Science Engineering. Graduated December, 2016 \\
+B.S. Computer Science and Engineering. Graduated December, 2016 \\
 Overall GPA (4.0 scale): 3.4
 
 \end{document}
